--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,9 @@
       <module>cloudalibaba-provider-payment9003</module>
     <module>cloudalibaba-provider-payment9004</module>
     <module>cloudalibaba-consumer-nacos-order84</module>
+      <module>seata-order-service2001</module>
+    <module>seata-order-service2002</module>
+    <module>seata-order-service2003</module>
   </modules>
   <packaging>pom</packaging>
 
@@ -109,14 +112,6 @@
         <artifactId>lombok</artifactId>
         <version>${lombok.version}</version>
         <optional>true</optional>
-      </dependency>
-      <!--spring cloud alibaba 2.1.0.RELEASE-->
-      <dependency>
-        <groupId>com.alibaba.cloud</groupId>
-        <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-        <version>2.1.0.RELEASE</version>
-        <type>pom</type>
-        <scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
